--- a/app/src/main/res/layout/card_game.xml
+++ b/app/src/main/res/layout/card_game.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:transitionName="card_game"
     tools:layout_width="match_parent">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/image_game_screen"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:adjustViewBounds="false"
             android:cropToPadding="false"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:scaleType="fitCenter"
             tools:src="@drawable/placeholder_screenshot" />
 
         <TextView
             android:id="@+id/text_game_title"
             style="@android:style/TextAppearance.Material.Subhead"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:baselineAligned="false"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="2"
             android:maxLines="2"
             android:textAlignment="viewStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image_game_screen"
+            app:layout_constraintTop_toTopOf="@+id/image_game_screen"
             tools:text="The Legend of Zelda: The Wind Waker" />
 
         <TextView
@@ -46,16 +52,16 @@
             style="@android:style/TextAppearance.Material.Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:ellipsize="end"
             android:lines="1"
             android:maxLines="1"
+            app:layout_constraintBottom_toBottomOf="@+id/image_game_screen"
+            app:layout_constraintStart_toStartOf="@+id/text_game_title"
+            app:layout_constraintTop_toBottomOf="@+id/text_game_title"
             tools:text="Nintendo" />
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
 
