--- a/app/src/main/res/layout/tv_title.xml
+++ b/app/src/main/res/layout/tv_title.xml
@@ -25,7 +25,7 @@
             android:id="@+id/badge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher"/>
+            android:src="@drawable/ic_citra"/>
 
     </RelativeLayout>
 </android.support.v17.leanback.widget.TitleView>
