--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="dolphin_blue">#2196f3</color>
     <color name="dolphin_blue_dark">#1976d2</color>
 
+    <color name="citra_orange">#fec303</color>
+    <color name="citra_orange_dark">#fe8a03</color>
+
     <color name="dolphin_accent_wii">#9e9e9e</color>
     <color name="dolphin_accent_wiiware">#2979ff</color>
     <color name="dolphin_accent_gamecube">#651fff</color>
