--- a/app/src/main/res/layout/fragment_emulation.xml
+++ b/app/src/main/res/layout/fragment_emulation.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="@dimen/spacing_small"
-        android:background="@color/dolphin_blue"
+        android:background="@color/citra_orange"
         android:textColor="@color/lb_tv_white"
         android:text="@string/emulation_done"
         android:visibility="gone"/>
