--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,9 @@
     <style name="DolphinBase" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Main theme colors -->
         <!-- Branding color for the app bar -->
-        <item name="colorPrimary">@color/dolphin_blue</item>
+        <item name="colorPrimary">@color/citra_orange</item>
         <!-- Darker variant for the status bar and contextual app bars -->
-        <item name="colorPrimaryDark">@color/dolphin_blue_dark</item>
+        <item name="colorPrimaryDark">@color/citra_orange_dark</item>
 
         <!-- Enable window content transitions -->
         <item name="android:windowContentTransitions">true</item>
@@ -19,8 +19,8 @@
 
     <!-- Same as above, but use default action bar, and mandate margins. -->
     <style name="DolphinSettingsBase" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/dolphin_blue</item>
-        <item name="colorPrimaryDark">@color/dolphin_blue_dark</item>
+        <item name="colorPrimary">@color/citra_orange</item>
+        <item name="colorPrimaryDark">@color/citra_orange_dark</item>
     </style>
 
     <!-- Inherit from the Base Dolphin Theme -->
@@ -30,7 +30,7 @@
     </style>
 
     <style name="DolphinGamecube" parent="DolphinBase">
-        <item name="colorAccent">@color/dolphin_accent_gamecube</item>
+        <item name="colorAccent">@color/citra_accent</item>
     </style>
 
     <style name="DolphinWiiware" parent="DolphinBase">
@@ -43,7 +43,7 @@
     </style>
 
     <style name="DolphinSettingsGamecube" parent="DolphinSettingsBase">
-        <item name="colorAccent">@color/dolphin_accent_gamecube</item>
+        <item name="colorAccent">@color/citra_accent</item>
     </style>
 
     <style name="DolphinSettingsWiiware" parent="DolphinSettingsBase">
@@ -56,8 +56,8 @@
     <!-- Inherit from the Base Dolphin Dialog Theme -->
 
     <style name="DolphinEmulationBase" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/dolphin_blue</item>
-        <item name="colorPrimaryDark">@color/dolphin_blue_dark</item>
+        <item name="colorPrimary">@color/citra_orange</item>
+        <item name="colorPrimaryDark">@color/citra_orange_dark</item>
         <item name="android:windowTranslucentNavigation">true</item>
 
         <item name="android:windowBackground">@android:color/black</item>
@@ -74,7 +74,7 @@
     </style>
 
     <style name="DolphinEmulationGamecube" parent="DolphinEmulationBase">
-        <item name="colorAccent">@color/dolphin_accent_gamecube</item>
+        <item name="colorAccent">@color/citra_accent</item>
     </style>
 
     <style name="DolphinEmulationWiiware" parent="DolphinEmulationBase">
@@ -82,8 +82,8 @@
     </style>
 
     <style name="DolphinEmulationTvBase" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/dolphin_blue</item>
-        <item name="colorPrimaryDark">@color/dolphin_blue_dark</item>
+        <item name="colorPrimary">@color/citra_orange</item>
+        <item name="colorPrimaryDark">@color/citra_orange_dark</item>
         <item name="android:windowTranslucentNavigation">true</item>
 
         <item name="android:windowBackground">@android:color/black</item>
@@ -100,7 +100,7 @@
     </style>
 
     <style name="DolphinEmulationTvGamecube" parent="DolphinEmulationTvBase">
-        <item name="colorAccent">@color/dolphin_accent_gamecube</item>
+        <item name="colorAccent">@color/citra_accent</item>
     </style>
 
     <style name="DolphinEmulationTvWiiware" parent="DolphinEmulationTvBase">
@@ -114,8 +114,8 @@
 
     <!-- Android TV Themes -->
     <style name="DolphinTvBase" parent="Theme.Leanback.Browse">
-        <item name="colorPrimary">@color/dolphin_blue</item>
-        <item name="colorPrimaryDark">@color/dolphin_blue_dark</item>
+        <item name="colorPrimary">@color/citra_orange</item>
+        <item name="colorPrimaryDark">@color/citra_orange_dark</item>
 
         <!-- Enable window content transitions -->
         <item name="android:windowContentTransitions">true</item>
@@ -124,7 +124,7 @@
     </style>
 
     <style name="DolphinTvGamecube" parent="DolphinTvBase">
-        <item name="colorAccent">@color/dolphin_accent_gamecube</item>
+        <item name="colorAccent">@color/citra_accent</item>
         <item name="browseTitleViewLayout">@layout/titleview</item>
     </style>
 
@@ -147,9 +147,9 @@
 
     <!-- You can also inherit from NNF_BaseTheme.Light -->
     <style name="FilePickerTheme" parent="NNF_BaseTheme.Light">
-        <item name="colorPrimary">@color/dolphin_blue</item>
-        <item name="colorPrimaryDark">@color/dolphin_blue_dark</item>
-        <item name="colorAccent">@color/dolphin_accent_gamecube</item>
+        <item name="colorPrimary">@color/citra_orange</item>
+        <item name="colorPrimaryDark">@color/citra_orange_dark</item>
+        <item name="colorAccent">@color/citra_accent</item>
 
         <!--&lt;!&ndash; Setting a divider is entirely optional &ndash;&gt;-->
         <item name="nnf_list_item_divider">?android:attr/listDivider</item>
@@ -163,9 +163,9 @@
     </style>
 
     <style name="FilePickerAlertDialogTheme" parent="Theme.AppCompat.Dialog.Alert">
-        <item name="colorPrimary">@color/dolphin_blue</item>
-        <item name="colorPrimaryDark">@color/dolphin_blue_dark</item>
-        <item name="colorAccent">@color/dolphin_accent_gamecube</item>
+        <item name="colorPrimary">@color/citra_orange</item>
+        <item name="colorPrimaryDark">@color/citra_orange_dark</item>
+        <item name="colorAccent">@color/citra_accent</item>
     </style>
 
 </resources>
