Resized the TimePicker to twice the regular size, changed System to Device clock for more clarity.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,7 +33,7 @@
         <item>5</item>
     </integer-array>
     <string-array name="systemClockNames" translatable="false">
-        <item>System clock</item>
+        <item>Device clock</item>
         <item>Simulated clock</item>
     </string-array>
     <integer-array name="systemClockValues" translatable="false">
