Retrieve date from INI when DateTimePicker is invoked.

--- a/app/src/main/res/layout/sysclock_datetime_picker.xml
+++ b/app/src/main/res/layout/sysclock_datetime_picker.xml
@@ -20,5 +20,6 @@
         android:layout_width="108dp"
         android:layout_height="108dp"
         android:scaleX="2.00"
-        android:scaleY="2.00" />
+        android:scaleY="2.00"
+        android:scrollX="-20dp" />
 </LinearLayout>
